--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beranda - GIS Portal</title>
 
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/beranda.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="beranda.css">
 </head>
 <body>
 
@@ -53,3 +53,4 @@
 
 </body>
 </html>
+
